1.修改打包脚本